--- a/templates/login.html
+++ b/templates/login.html
@@ -49,8 +49,8 @@ function signInCallback(authResult) {
         if (result) {
           $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
          setTimeout(function() {
-          window.location.href = "/restaurant";
-         }, 4000);
+          window.location.href = "/";
+         }, 1000);
 
       } else if (authResult['error']) {
     console.log('There was an error: ' + authResult['error']);
