--- a/templates/public_categories.html
+++ b/templates/public_categories.html
@@ -35,6 +35,7 @@
   </div>
 </div>
 
+
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -50,9 +51,24 @@
 
         <li> <a href="{{url_for('showCategories')}}">Categories</a></li>
         <li><a href="{{url_for('showNew')}}">New Items</a></li>
+        <li>
+
+        </li>
+
       </ul>
+
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>
+
+        <li>
+
+         {%if 'username' not in session %}
+            <a href="{{url_for('showLogin')}}">Click Here to Login
+            {% else %}
+            <a href="{{url_for('disconnect')}}">Logout
+            {% endif %}
+
+
+            <span class="glyphicon glyphicon-user"></span></a></li>
 
       </ul>
     </div>
@@ -61,55 +77,33 @@
 
 <div class="container">
   <div class="row">
+    <div class="col-sm-12">
+  <h3 style="text-align: center; background-color: pink">
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        {% for message in messages %}
+              {{ message }}
+        {% endfor %}
+        {% endif %}
+    {% endwith %}
+</h3>
+</div>
+  <div class="row">
+
+  {% for c in categories %}
     <div class="col-sm-4">
       <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+         <div class="panel-body"><h1>{{c.name}}</h1></div>
+        <div class="panel-footer">
+        <a href = "{{url_for('showItems', category_id = c.id)}}"> Click to see a full list of {{c.name}} related products </a>
+      </div>
       </div>
     </div>
-    <div class="col-sm-4">
-      <div class="panel panel-danger">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="panel panel-success">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
+{% endfor %}
+
   </div>
 </div><br>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-  </div>
-</div><br><br>
 
 <footer class="container-fluid text-center">
   <p>Online Store Copyright</p>
