--- a/templates/recentItems.html
+++ b/templates/recentItems.html
@@ -39,12 +39,12 @@
         </div>
         <div class="col-md-1"></div>
     </div>
-    {% for c in categories %}
-        <a href = "{{url_for('showItems', category_id = c.id)}}">
+    {% for item in items %}
+        <a href = "{{url_for('showItems', category_id = item.id)}}">
             <div class="row">
                 <div class="col-md-1"></div>
                     <div class="col-md-10 restaurant-list">
-                        <h3>{{c.name}}</h3>
+                        <h3>{{item.name}} {{item.category.name}}</h3>
                     </div>
                 <div class="col-md-1"></div>
             </div>
