Finished, prior to pep8

--- a/templates/auth_items.html
+++ b/templates/auth_items.html
@@ -88,7 +88,7 @@
     {% endwith %}
 </h3>
 </div>
-<div class="col-sm-12" style="text-align: center; background-color: grey">
+<div class="col-sm-12" style="text-align: center; background-color: grey ; margin-bottom: 10px; padding:15px;">
          <a href="{{url_for('addItems', category_id = category.id )}}">
             <button class="btn btn-danger" id="new-menu-item">
                Add Sports Item
