--- a/templates/editItem.html
+++ b/templates/editItem.html
@@ -1,15 +1,96 @@
-{% extends "main.html" %} {% block content %} {% include "header.html" %}
-<div class="row divider green">
-    <div class="col-md-12"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Rob's Sports Supplies</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+    /* Remove the navbar's default rounded borders and increase the bottom margin */
+    .navbar {
+      margin-bottom: 50px;
+      border-radius: 0;
+    }
+
+    /* Remove the jumbotron's default bottom margin */
+     .jumbotron {
+      margin-bottom: 0;
+    }
+
+    /* Add a gray background color and some padding to the footer */
+    footer {
+      background-color: #f2f2f2;
+      padding: 25px;
+    }
+  </style>
+</head>
+<body>
+
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>Rob's Sports Supplies</h1>
+    <p>Sports gear and more</p>
+  </div>
 </div>
-<div class="row banner menu">
-    <div class="col-md-11 col-md-offset-1 padding-none">
-        <h1>Edit Menu Item</h1>
+
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
     </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+
+        <li> <a href="{{url_for('showCategories')}}">Categories</a></li>
+        <li><a href="{{url_for('showNew')}}">New Items</a></li>
+        <li>
+
+        </li>
+
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <li><a href="{{url_for('addCategory')}}">Add New Category</a></li>
+        </li>
+        <li>
+
+         {%if 'username' not in session %}
+            <a href="{{url_for('showLogin')}}">Click Here to Login
+            {% else %}
+            <a href="{{url_for('disconnect')}}">Logout
+            {% endif %}
+
+
+            <span class="glyphicon glyphicon-user"></span></a></li>
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+  <h3 style="text-align: center; background-color: pink">
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        {% for message in messages %}
+              {{ message }}
+        {% endfor %}
+        {% endif %}
+    {% endwith %}
+</h3>
 </div>
-<div class="row">
-    <div class="col-md-6 col-md-offset-1 padding-top">
-        <form action="#" method="post">
+ <form action="#" method="post">
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" maxlength="100" class="form-control" name="name" value="{{item.name }}">
@@ -17,14 +98,31 @@
                 <textarea class="form-control" maxlength="250" rows="3" name="description">{{item.description}}</textarea>
 
             </div>
+          <div class="col-sm-6" style="text-align: right;">
             <button type="submit" class="btn btn-default" id="submit" type="submit">
                 <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Save</button>
-           <a href = "{{url_for('showItems', category_id = category_id)}}">
+              </div>
+
+
+    </form>
+    <div class="col-sm-6"  style="text-align: left;" >
+     <a href = "{{url_for('showItems', category_id = category_id)}}">
                 <button class="btn btn-default delete">
                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
             </a>
-    </div>
-    </form>
-</div>
-</div>
-{% endblock %}
+          </div></div>
+
+  </div>
+</div><br>
+
+
+<footer class="container-fluid text-center">
+  <p>Online Store Copyright</p>
+  <form class="form-inline">Get deals:
+    <input type="email" class="form-control" size="50" placeholder="Email Address">
+    <button type="button" class="btn btn-danger">Sign Up</button>
+  </form>
+</footer>
+
+</body>
+</html>
