--- a/templates/recentItems.html
+++ b/templates/recentItems.html
@@ -1,53 +1,118 @@
-{% extends "main.html" %}
-{% block content %}
-    <div class="row top-menu">
-        <div class="col-md-10"></div>
-        <div class="col-md-2 text-right">
-            <a href="{{url_for('showLogin')}}">Click Here to Log in </a>
-        </div>
-    </div>
-    <div class="row divider blue">
-        <div class="col-md-12"></div>
-    </div>
-    <div class="row banner main">
-        <div class="col-md-1"></div>
-        <div class="col-md-11 padding-none">
-            <h1>Categories</h1>
-        </div>
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Rob's Sports Supplies</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+    /* Remove the navbar's default rounded borders and increase the bottom margin */
+    .navbar {
+      margin-bottom: 50px;
+      border-radius: 0;
+    }
 
-    <div class = 'flash'>
-              {% with messages = get_flashed_messages() %}
-      {% if messages %}
+    /* Remove the jumbotron's default bottom margin */
+     .jumbotron {
+      margin-bottom: 0;
+    }
 
-        <ul>
-        {% for message in messages %}
-            <li> <strong> {{ message }} </strong> </li>
-        {% endfor %}
-        </ul>
-        {% endif %}
-    {% endwith %}
+    /* Add a gray background color and some padding to the footer */
+    footer {
+      background-color: #f2f2f2;
+      padding: 25px;
+    }
+  </style>
+</head>
+<body>
 
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>Rob's Sports Supplies</h1>
+    <p>Sports gear and more</p>
+  </div>
 </div>
 
 
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
 
-    <div class="row padding-top padding-bottom">
-        <div class="col-md-1"></div>
-        <div class="col-md-10 padding-none">
-
-        </div>
-        <div class="col-md-1"></div>
     </div>
-    {% for item in items %}
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+
+        <li> <a href="{{url_for('showCategories')}}">Categories</a></li>
+        <li><a href="{{url_for('showNew')}}">New Items</a></li>
+        <li>
+
+        </li>
+
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+
+        <li>
+
+         {%if 'username' not in session %}
+            <a href="{{url_for('showLogin')}}">Click Here to Login
+            {% else %}
+            <a href="{{url_for('disconnect')}}">Logout
+            {% endif %}
+
+
+            <span class="glyphicon glyphicon-user"></span></a></li>
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+  <h3 style="text-align: center; background-color: pink">
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        {% for message in messages %}
+              {{ message }}
+        {% endfor %}
+        {% endif %}
+    {% endwith %}
+</h3>
+</div>
+  <div class="row">
+
+  {% for item in items %}
         <a href = "{{url_for('showItems', category_id = item.id)}}">
             <div class="row">
                 <div class="col-md-1"></div>
                     <div class="col-md-10 restaurant-list">
-                        <h3>{{item.name}} {{item.category.name}}</h3>
+                        <p><strong>Category:</strong> {{item.category.name}} - <strong> Item:</strong> {{item.name}} <p>
                     </div>
                 <div class="col-md-1"></div>
             </div>
         </a>
     {% endfor %}
-{% endblock %}
+
+  </div>
+</div><br>
+
+
+<footer class="container-fluid text-center">
+  <p>Online Store Copyright</p>
+  <form class="form-inline">Get deals:
+    <input type="email" class="form-control" size="50" placeholder="Email Address">
+    <button type="button" class="btn btn-danger">Sign Up</button>
+  </form>
+</footer>
+
+</body>
+</html>
