--- a/templates/auth_items.html
+++ b/templates/auth_items.html
@@ -60,7 +60,7 @@
       <ul class="nav navbar-nav navbar-right">
 
         <li>
-
+<!-- Check User name -->
          {%if 'username' not in session %}
             <a href="{{url_for('showLogin')}}">Click Here to Login
             {% else %}
