--- a/templates/deleteItem.html
+++ b/templates/deleteItem.html
@@ -62,7 +62,7 @@
           <li><a href="{{url_for('addCategory')}}">Add New Category</a></li>
         </li>
         <li>
-
+<!-- Check User name -->
          {%if 'username' not in session %}
             <a href="{{url_for('showLogin')}}">Click Here to Login
             {% else %}
